# project-template

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yaml  test.yaml
docs/: index.md
src/: main.py  utils.py
src/config/: config.yaml
tests/: requirements.txt
